tests/ui/g-control-resource-zero-tag.stderr
error[E0080]: evaluation panicked: control resource tag 0 is reserved
 --> src/global.rs
  |
  |         validate_unit_control_payload_contract(spec);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::g::Msg<124, (), ZeroTagControlKind> as hibana::global::MessageControlSpec>::CONTROL` failed inside this call
  |
note: inside `hibana::global::validate_unit_control_payload_contract`
 --> src/global.rs
  |
  |     validate_control_descriptor_contract(spec);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_control_descriptor_contract`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("control resource tag 0 is reserved");
  |         -------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  |     const CONTROL: Option<StaticControlDesc> = <Self as MessageControlSpec>::CONTROL;
  |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  |             let path = match <M as MessageRuntime>::CONTROL {
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole>::INDEX;
  | |         let to = <To as KnownRole>::INDEX;
  | |         crate::global::validate_role_index(from);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, Msg<124, (), ZeroTagControlKind>, 0>`
  --> tests/ui/g-control-resource-zero-tag.rs:46:13
   |
46 |       let _ = g::send::<
   |  _____________^
47 | |         g::Role<0>,
48 | |         g::Role<1>,
49 | |         g::Msg<ZERO_TAG_CONTROL_LOGICAL, (), ZeroTagControlKind>,
50 | |         0,
51 | |     >();
   | |_______^
